--- a/WindowsRed/WindowsRed.csproj
+++ b/WindowsRed/WindowsRed.csproj
@@ -104,6 +104,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Global.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\CommentControl.xaml.cs">
       <DependentUpon>CommentControl.xaml</DependentUpon>
